# popstatgensim

./: .gitignore  README.md  pyproject.toml  setup.py
code/: demo_h2_vs_h2g.ipynb  popsim.py
code/popstatgen/: __init__.py  core_functions.py  popgen_functions.py  popsim.py  statgen_functions.py
docs/architecture/: refactor_efficiency_proposals.md  refactor_proposal.md  refactoring_changes.md  repository_structure.md
notebooks/: demo_h2_vs_h2g.ipynb  demo_h2_vs_h2g_pt2.ipynb
notebooks/benchmark_REML_04-10/: README.md  analyze_benchmarks.py  benchmark_reml_utils.py  report.md  run_benchmarks.py  worker_run_reml.py
src/popstatgensim/: __init__.py  _reml_accel.c  core_functions.py  export_functions.py  popgen_functions.py  popsim.py  relative_types.py  reml.py  statgen_functions.py
src/popstatgensim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/popstatgensim/estimation/: __init__.py  _common.py  am.py  gwas.py  he.py  pgs.py  reml.py
src/popstatgensim/genetics/: __init__.py  frequencies.py  genotypes.py
src/popstatgensim/genome/: __init__.py  frequencies.py  genotypes.py  ld.py  pca.py  structure.py
src/popstatgensim/io/: __init__.py  alignment.py  gcta.py
src/popstatgensim/pedigree/: __init__.py  ibd.py  pedigree.py  relations.py  relative_types.py
src/popstatgensim/plotting/: __init__.py  common.py  estimation.py  genetics.py  genome.py
tests/: conftest.py  demo_h2_loss.ipynb  demo_h2_vs_h2g_pt2.ipynb  test_estimation.py  test_genetics_and_genome.py  test_genome.py  test_io.py  test_public_api.py  test_trait_and_population.py
(+14 files in other folders)
